--- a/FlashyQuiz/Quizzes/View/DetailCell.xib
+++ b/FlashyQuiz/Quizzes/View/DetailCell.xib
@@ -9,29 +9,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailCell" rowHeight="150" id="KGk-i7-Jjw" customClass="DetailCell" customModule="FlashyQuiz" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="394" height="150"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailCell" rowHeight="132" id="KGk-i7-Jjw" customClass="DetailCell" customModule="FlashyQuiz" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="394" height="132"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="394" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="394" height="132"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Question " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mp6-9N-MCr">
-                        <rect key="frame" x="20" y="16" width="354" height="53"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Question " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mp6-9N-MCr">
+                        <rect key="frame" x="20" y="7" width="354" height="53"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Correct Answer " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wFB-EQ-jKx">
-                        <rect key="frame" x="20" y="88" width="132" height="21"/>
+                        <rect key="frame" x="20" y="68" width="132" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Answer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2nY-eU-Bkv">
-                        <rect key="frame" x="20" y="117" width="354" height="21"/>
+                        <rect key="frame" x="20" y="97" width="354" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -45,7 +45,7 @@
                 <outlet property="correctAnswerLabel" destination="2nY-eU-Bkv" id="Kvs-4B-31h"/>
                 <outlet property="questionLabel" destination="mp6-9N-MCr" id="vpj-Tu-0jD"/>
             </connections>
-            <point key="canvasLocation" x="120.61068702290076" y="57.74647887323944"/>
+            <point key="canvasLocation" x="120.61068702290076" y="51.408450704225352"/>
         </tableViewCell>
     </objects>
 </document>
